OffscreenCanvas error fixed on Safari

--- a/data/css/main.css
+++ b/data/css/main.css
@@ -1,87 +1,3 @@
-@font-face {
-    font-family: dyslexic;
-    src: url(/data/webfonts/dyslexic.otf)
-}
-
-@font-face {
-    font-family: varela;
-    src: url(/data/webfonts/varela.ttf)
-}
-
-@media screen and (min-width: 48em) and (max-width: 64em) {
-    .top {
-        padding: 2em 4em
-    }
-
-    .main {
-        padding: 1em 4em
-    }
-
-    .image img {
-        max-width: 60%
-    }
-
-    :root {
-        --font: 18px;
-        --header: 90px
-    }
-}
-
-@media screen and (max-width: 48em) {
-    .top {
-        padding: 2em 1em
-    }
-
-    .main {
-        padding: 1em 1em 2em 1em
-    }
-
-    .image img {
-        max-width: 80%
-    }
-
-    :root {
-        --font: 16px;
-        --header: 60px
-    }
-
-    .top a:not(:first-child), .top i.theme {
-        display: none
-    }
-
-    .top i.fa-bars {
-        display: block
-    }
-
-    .top.active a:not(:first-child) {
-        padding-top: .4em;
-        display: block
-    }
-}
-
-@media screen and (min-width: 64em) {
-    .top {
-        max-width: 64em;
-        padding: 2em 6em;
-        margin: 0 auto
-    }
-
-    .main {
-        max-width: 64em;
-        padding: 1em 6em;
-        margin: 0 auto
-    }
-
-    .image img {
-        max-width: 50%
-    }
-
-    :root {
-        --font: 20px;
-        --header: 110px
-    }
-}
-
 body[theme = sun] {
     --background: #eee;
     --text: #666;
@@ -383,7 +299,7 @@ canvas:focus {
 
 .top > i {
     float: right;
-    padding-bottom: 1em
+    padding-left: .8em
 }
 
 .top a:not(:first-child) {
@@ -391,7 +307,7 @@ canvas:focus {
     padding-left: 1em
 }
 
-.top i.fa-bars {
+.top .fa-bars {
     display: none
 }
 
@@ -435,4 +351,88 @@ canvas:focus {
     transition-property: color, border-radius, border-color, background-color, opacity;
     transition-duration: var(--fade);
     box-sizing: border-box
+}
+
+@font-face {
+    font-family: dyslexic;
+    src: url(/data/webfonts/dyslexic.otf)
+}
+
+@font-face {
+    font-family: varela;
+    src: url(/data/webfonts/varela.ttf)
+}
+
+@media screen and (min-width: 48em) and (max-width: 64em) {
+    .top {
+        padding: 2em 4em
+    }
+
+    .main {
+        padding: 1em 4em
+    }
+
+    .image img {
+        max-width: 60%
+    }
+
+    :root {
+        --font: 18px;
+        --header: 90px
+    }
+}
+
+@media screen and (max-width: 48em) {
+    .top {
+        padding: 2em 1em
+    }
+
+    .main {
+        padding: 1em 1em 2em 1em
+    }
+
+    .image img {
+        max-width: 80%
+    }
+
+    :root {
+        --font: 16px;
+        --header: 60px
+    }
+
+    .top a:not(:first-child), .top .theme {
+        display: none
+    }
+
+    .top .fa-bars {
+        display: block
+    }
+
+    .top.active a:not(:first-child) {
+        padding-top: .4em;
+        display: block
+    }
+}
+
+@media screen and (min-width: 64em) {
+    .top {
+        max-width: 64em;
+        padding: 2em 6em;
+        margin: 0 auto
+    }
+
+    .main {
+        max-width: 64em;
+        padding: 1em 6em;
+        margin: 0 auto
+    }
+
+    .image img {
+        max-width: 50%
+    }
+
+    :root {
+        --font: 20px;
+        --header: 110px
+    }
 }
